--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             </div>
             <div class="right-header">
                 <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
                 </ul>
             </div>
         </div>
@@ -25,27 +25,33 @@
 
     <main class="content">
         <div class="sec-1">
-            <div class="left-sec-1">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button type="button" class="signup" href="#">Sign up</button>
-            </div>
-            <div class="image-sec-1">
-                <img src="./images/landscape.jpg" alt="A beautiful mountainscape with a hiker and colorful sunset.">
+            <div class="sec-1-container">
+                <div class="left-sec-1">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast.</p>
+                    <button type="button" class="signup" href="#">Sign up</button>
+                </div>
+                <div class="image-sec-1">
+                    <img src="./images/landscape.jpg" alt="A beautiful mountainscape with a hiker and colorful sunset.">
+                </div>
             </div>
         </div>
 
         <div class="sec-2">
             <h2>Some random information</h2>
-            <div class="sec-2-item"></div>
-            <div class="sec-2-item"></div>
-            <div class="sec-2-item"></div>
-            <div class="sec-2-item"></div>
+            <div class="sec-2-container">
+                <div class="sec-2-item"></div>
+                <div class="sec-2-item"></div>
+                <div class="sec-2-item"></div>
+                <div class="sec-2-item"></div>
+            </div>
         </div>
 
         <div class="sec-3">
-            <div class="quote-text"></div>
-            <h3>-Thor, God of Thunder</h3>
+            <div class="sec-3-container">
+                <div class="quote-text"></div>
+                <h3>-Thor, God of Thunder</h3>
+            </div>
         </div>
         
         <div class="sec-4">
