--- a/index.html
+++ b/index.html
@@ -40,10 +40,22 @@
         <div class="sec-2">
             <h2>Some random information</h2>
             <div class="sec-2-container">
-                <div class="sec-2-item"></div>
-                <div class="sec-2-item"></div>
-                <div class="sec-2-item"></div>
-                <div class="sec-2-item"></div>
+                <div class="sec-2-item">
+                    <img>
+                    <p>paragraph item text for the subinfo beneath the item frame.</p>
+                </div>
+                <div class="sec-2-item">
+                    <img>
+                    <p>paragraph item text for the subinfo beneath the item frame.</p>
+                </div>
+                <div class="sec-2-item">
+                    <img>
+                    <p>paragraph item text for the subinfo beneath the item frame.</p>
+                </div>
+                <div class="sec-2-item">
+                    <img>
+                    <p>paragraph item text for the subinfo beneath the item frame.</p>
+                </div>
             </div>
         </div>
 
