Added quote section

--- a/index.html
+++ b/index.html
@@ -61,8 +61,16 @@
 
         <div class="sec-3">
             <div class="sec-3-container">
-                <div class="quote-text"></div>
-                <h3>-Thor, God of Thunder</h3>
+                <div class="quote-text">
+                    <p>
+                        Sometimes we make the process more complicated than we need to. 
+                        We will never make a journey of a thousand miles by fretting 
+                        about how long it will take or how hard it will be. 
+                        We make the journey by taking each day step by step and then 
+                        repeating it again and again until we reach our destination.
+                    </p>
+                </div>
+                <h3>- Joseph B. Wirthlin</h3>
             </div>
         </div>
         
