--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
         
         <div class="sec-4">
             <div class="call-box">
-                <h4>Call to action! It's time!</h4>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <div class="call-text">
+                    <h4>Call to action! It's time!</h4>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
 
                 <button type="button" class="signup white-border" href="#">Sign up</button>
             </div>
