Add media, theme Firepit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Landing Page</title>
+    <title>The Firepit BBQ</title>
 
     <link rel="stylesheet" href="./static/css/styles.css">
 </head>
@@ -11,13 +11,13 @@
     <header>
         <div class="header-container">
             <div class="left-header">
-                <div class="text">Header Logo</div>
+                <div class="text">The Firepit</div>
             </div>
             <div class="right-header">
                 <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
+                    <li><strong>Email:</strong> thefirepit@sbcglobal.net</li>
+                    <li><strong>Phone:</strong> (620) 423-4327</li>
+                    <li><strong>Address:</strong> 532 Maple St, Chetopa, Kansas</li>
                 </ul>
             </div>
         </div>
@@ -27,12 +27,12 @@
         <div class="sec-1">
             <div class="sec-1-container">
                 <div class="left-sec-1">
-                    <h1>This website is awesome</h1>
-                    <p>This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast.</p>
-                    <button type="button" class="signup" href="#">Sign up</button>
+                    <h1>Locally Owned BBQ</h1>
+                    <p>The Firepit is the result of hard work and dedication to damn good food. We work with you to make sure you have full bellies when your event time comes!</p>
+                    <button type="button" class="contact" href="#">Contact Us</button>
                 </div>
                 <div class="image-sec-1">
-                    <img src="./images/landscape.jpg" alt="A beautiful mountainscape with a hiker and colorful sunset.">
+                    <img src="./images/4-state-finest-crop.jpg" alt="An official posting of Kansas 4 state finest award showcasing the owners of The Firepit. Claiming BEST BBQ. The owners are starding together holding the award.">
                 </div>
             </div>
         </div>
@@ -41,19 +41,19 @@
             <h2>Some random information</h2>
             <div class="sec-2-container">
                 <div class="sec-2-item">
-                    <img>
+                    <img src="./images/bbq-collage.jpg">
                     <p>paragraph item text for the subinfo beneath the item frame.</p>
                 </div>
                 <div class="sec-2-item">
-                    <img>
+                    <img src="./images/pulled-pork.jpg">
                     <p>paragraph item text for the subinfo beneath the item frame.</p>
                 </div>
                 <div class="sec-2-item">
-                    <img>
+                    <img src="./images/building.jpg" >
                     <p>paragraph item text for the subinfo beneath the item frame.</p>
                 </div>
                 <div class="sec-2-item">
-                    <img>
+                    <img src="./images/firepit-hat.jpg" alt="A black and orange mesh baseball cap with embroidered text FIREPIT CHETOPA KS placed on a green cutting mat. In the background, a whiteboard displays handwritten words Awesome BBQ with an arrow pointing down.">
                     <p>paragraph item text for the subinfo beneath the item frame.</p>
                 </div>
             </div>
@@ -81,13 +81,13 @@
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
 
-                <button type="button" class="signup white-border" href="#">Sign up</button>
+                <button type="button" class="contact white-border" href="#">Contact Us</button>
             </div>
         </div>
     </main>
 
     <footer>
-        <P>Copyright © The Odin Project 2021</P>
+        <P>© 2025 The Firepit. All rights reserved. </P>
     </footer>
 </body>
 </html>
