--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>The Firepit BBQ</title>
 
     <link rel="stylesheet" href="./static/css/styles.css">
+    <link rel="scripts" href="./static/js/script.js">
 </head>
 <body>
     <header>
@@ -29,7 +30,9 @@
                 <div class="left-sec-1">
                     <h1>Locally Owned BBQ</h1>
                     <p>The Firepit is the result of hard work and dedication to damn good food. We work with you to make sure you have full bellies when your event time comes!</p>
-                    <button type="button" class="contact" href="#">Contact Us</button>
+                    <br>
+                    <p>We regularly open up pre-order specials on Facebook where you can stop by our physical location and pick up your limited time order. Each special is a <em>while supplies last</em> event, so get it while its hot!</p>
+                    <button type="button" class="contact" onclick="window.location.href ='https://www.facebook.com/ChetopaKansas';">Contact Us</button>
                 </div>
                 <div class="image-sec-1">
                     <img src="./images/4-state-finest-crop.jpg" alt="An official posting of Kansas 4 state finest award showcasing the owners of The Firepit. Claiming BEST BBQ. The owners are starding together holding the award.">
@@ -38,23 +41,23 @@
         </div>
 
         <div class="sec-2">
-            <h2>Some random information</h2>
+            <h2>About our process</h2>
             <div class="sec-2-container">
                 <div class="sec-2-item">
                     <img src="./images/bbq-collage.jpg">
-                    <p>paragraph item text for the subinfo beneath the item frame.</p>
+                    <p>Special menu events are announced on our facebook page. Be sure to check in fast!</p>
                 </div>
                 <div class="sec-2-item">
                     <img src="./images/pulled-pork.jpg">
-                    <p>paragraph item text for the subinfo beneath the item frame.</p>
+                    <p>Specialty item prepared in time for your event.</p>
                 </div>
                 <div class="sec-2-item">
                     <img src="./images/building.jpg" >
-                    <p>paragraph item text for the subinfo beneath the item frame.</p>
+                    <p>Physical location closed for dine in, <strong>catering only</strong> at this time.</p>
                 </div>
                 <div class="sec-2-item">
                     <img src="./images/firepit-hat.jpg" alt="A black and orange mesh baseball cap with embroidered text FIREPIT CHETOPA KS placed on a green cutting mat. In the background, a whiteboard displays handwritten words Awesome BBQ with an arrow pointing down.">
-                    <p>paragraph item text for the subinfo beneath the item frame.</p>
+                    <p>Limited merchandise available upon request!</p>
                 </div>
             </div>
         </div>
@@ -77,11 +80,11 @@
         <div class="sec-4">
             <div class="call-box">
                 <div class="call-text">
-                    <h4>Call to action! It's time!</h4>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <h4>Hosting an event?</h4>
+                    <p>Don't be afraid to contact us through our listed methods, we check regularly and would be happy to organise catering service and provide you a quote.</p>
                 </div>
 
-                <button type="button" class="contact white-border" href="#">Contact Us</button>
+                <button class="contact white-border" onclick="window.location.href ='https://www.facebook.com/ChetopaKansas/about_contact_and_basic_info';">Contact Us</button>
             </div>
         </div>
     </main>
