final firepit theming

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="./static/css/styles.css">
     <link rel="scripts" href="./static/js/script.js">
+    <link rel="icon" href="./images/firepit-hat-logo.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -32,7 +33,7 @@
                     <p>The Firepit is the result of hard work and dedication to damn good food. We work with you to make sure you have full bellies when your event time comes!</p>
                     <br>
                     <p>We regularly open up pre-order specials on Facebook where you can stop by our physical location and pick up your limited time order. Each special is a <em>while supplies last</em> event, so get it while its hot!</p>
-                    <button type="button" class="contact" onclick="window.location.href ='https://www.facebook.com/ChetopaKansas';">Contact Us</button>
+                    <button type="button" class="contact" onclick="window.open('https://www.facebook.com/ChetopaKansas', '_blank');">Contact Us</button>
                 </div>
                 <div class="image-sec-1">
                     <img src="./images/4-state-finest-crop.jpg" alt="An official posting of Kansas 4 state finest award showcasing the owners of The Firepit. Claiming BEST BBQ. The owners are starding together holding the award.">
@@ -41,19 +42,19 @@
         </div>
 
         <div class="sec-2">
-            <h2>About our process</h2>
+            <h2>About our business</h2>
             <div class="sec-2-container">
                 <div class="sec-2-item">
-                    <img src="./images/bbq-collage.jpg">
+                    <img src="./images/bbq-collage.jpg" alt="Collage showing loaded fries topped with chopped barbecue meat, cheese, jalapenos, and sauces, racks of smoked ribs with a rich glaze, and cubes of caramelized pork burnt ends in a glossy sauce. The food is presented in a casual, inviting setting, highlighting a hearty and satisfying barbecue experience. No visible text in the image. The overall tone is warm and appetizing, evoking comfort and enjoyment.">
                     <p>Special menu events are announced on our facebook page. Be sure to check in fast!</p>
                 </div>
                 <div class="sec-2-item">
                     <img src="./images/pulled-pork.jpg">
-                    <p>Specialty item prepared in time for your event.</p>
+                    <p>Specialty items prepared in time for your event.</p>
                 </div>
                 <div class="sec-2-item">
                     <img src="./images/building.jpg" >
-                    <p>Physical location closed for dine in, <strong>catering only</strong> at this time.</p>
+                    <p>Physical location closed for regular dine in, <strong>catering only</strong> at this time.</p>
                 </div>
                 <div class="sec-2-item">
                     <img src="./images/firepit-hat.jpg" alt="A black and orange mesh baseball cap with embroidered text FIREPIT CHETOPA KS placed on a green cutting mat. In the background, a whiteboard displays handwritten words Awesome BBQ with an arrow pointing down.">
@@ -64,16 +65,18 @@
 
         <div class="sec-3">
             <div class="sec-3-container">
-                <div class="quote-text">
-                    <p>
-                        Sometimes we make the process more complicated than we need to. 
-                        We will never make a journey of a thousand miles by fretting 
-                        about how long it will take or how hard it will be. 
-                        We make the journey by taking each day step by step and then 
-                        repeating it again and again until we reach our destination.
-                    </p>
+                <h3>Gallery</h3>
+                <div class="food-images">
+                    <img src="./images/firepit-logo1.jpg">
+                    <img src="./images/raw1.jpg">
+                    <img src="./images/ribs1.jpg">
+                    <img src="./images/balogne1.jpg">
+                    <img src="./images/beans1.jpg">
+                    <img src="./images/japcorn1.jpg">
+                    <img src="./images/foilwrapped1.jpg">
+                    <img src="./images/NcoHat.jpg">
+                    <img src="./images/billboard.jpg">
                 </div>
-                <h3>- Joseph B. Wirthlin</h3>
             </div>
         </div>
         
@@ -84,7 +87,7 @@
                     <p>Don't be afraid to contact us through our listed methods, we check regularly and would be happy to organise catering service and provide you a quote.</p>
                 </div>
 
-                <button class="contact white-border" onclick="window.location.href ='https://www.facebook.com/ChetopaKansas/about_contact_and_basic_info';">Contact Us</button>
+                <button class="contact white-border" onclick="window.open('https://www.facebook.com/ChetopaKansas/about_contact_and_basic_info', '_blank');">Contact Us</button>
             </div>
         </div>
     </main>
